chore: Refactor furdata to reflect current spec
Signed-off-by: Raphiel Rollerscaperers <rapherion@raphielgang.org>

--- a/furdata.yaml
+++ b/furdata.yaml
@@ -1,23 +1,26 @@
 devices:
-  # Do NOT remove this entry.
-  - device: fivenightsatfreddys
-    family: impostoressuspectos
-  - device: lmi
-    family: gourami
-  - device: apollo
-    family: gourami
-  - device: alioth
-    family: gourami
-  - device: munch
-    family: gourami
-  - device: bluejay
-    family: brooklyn
-  - device: oriole
-    family: brooklyn
-  - device: raven
-    family: brooklyn
+  fivenightsatfreddys:
+    - impostressuspectos
+  gourami:
+    - lmi
+    - apollo
+    - alioth
+    - munch
+  brooklyn:
+    - bluejay
+    - oriole
+    - raven
 furries:
-  - family: gourami
-    names: Raphielscape, Dyneteve, OC'D, obsecenlyvague, RealAkito
-  - family: brooklyn
-    names: Dyneteve, Lunarixus
+  gourami:
+    brand: Xiaomi
+    furs:
+      - Raphielscape
+      - Dyneteve
+      - OC'D
+      - obsecenlyvague
+      - RealAkito
+  brooklyn:
+    brand: Google
+    furs:
+      - Dyneteve
+      - Lunarixus
