--- a/furdata.yaml
+++ b/furdata.yaml
@@ -10,6 +10,15 @@ devices:
     - bluejay
     - oriole
     - raven
+  amogus:
+    - amogus
+  bouquet:
+    - whyred
+    - tulip
+  miatoll:
+    - miatoll
+  parker:
+    - parker
 furries:
   gourami:
     brand: Xiaomi
@@ -24,3 +33,19 @@ furries:
     furs:
       - Dyneteve
       - Lunarixus
+  amogus:
+    brand: Motorola
+    furs:
+      - Electimon
+  bouquet:
+    brand: Xiaomi
+    furs:
+      - Reinazhard
+  miatoll:
+    brand: Xiaomi
+    furs:
+      - mi33rx
+  parker:
+    brand: Motorola
+    furs:
+      - Hasaber8
