--- a/.github/workflows/genChangelog.yml
+++ b/.github/workflows/genChangelog.yml
@@ -16,11 +16,17 @@ jobs:
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_dir: changelog
-          output_dir: changelog
+          output_dir: changelog/
           build_html: true
           build_pdf: false
-      - name: Commit results
+      - name: Commit files
         run: |
           git add changelog
-          git commit -m 'Sync Changelogs' || echo "No changes to commit"
-          git push origin || echo "No changes to commit"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -m 'Sync Changelogs'
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
