--- a/.github/workflows/genChangelog.yml
+++ b/.github/workflows/genChangelog.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
+          theme: changelog/styling/markdown.css
           input_dir: changelog
           output_dir: changelog/
           build_html: true
