workflows(genChangelog): Don't extend the CSS
Signed-off-by: Raphiel Rollerscaperers <rapherion@raphielgang.org>

--- a/.github/workflows/genChangelog.yml
+++ b/.github/workflows/genChangelog.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
           theme: changelog/styling/markdown.css
+          extend_default_theme: false
           input_dir: changelog
           output_dir: changelog/
           build_html: true
