chore(furdata): Sync
Signed-off-by: Dyneteve <32036579+Dyneteve@users.noreply.github.com>

--- a/furdata.yaml
+++ b/furdata.yaml
@@ -6,6 +6,9 @@ devices:
     - apollo
     - alioth
     - munch
+  crosshatch:
+    - crosshatch
+    - blueline
   brooklyn:
     - bluejay
     - oriole
@@ -26,6 +29,10 @@ furries:
       - Raphielscape
       - Dyneteve
       - obsecenlyvague
+  crosshatch:
+    brand: Google
+    furs:
+      - mattDev0
   brooklyn:
     brand: Google
     furs:
