--- a/buildChangeMeta.yaml
+++ b/buildChangeMeta.yaml
@@ -7,3 +7,5 @@ data_class: INVIERNO:aa/xo
 build_rel:
   - tag: UP1A.230905.019
     type: ursamoon-early-dogfood
+  - tag: UP1A.231005.007
+    type: ursamoon
