--- a/changelogData.yaml
+++ b/changelogData.yaml
@@ -41,3 +41,4 @@ changeset_data:
     dogfood_info_url:
       data: 15xwUuvkXJZ0qYnF-FBdsLmyvBmr6W2GnnViIME_e0-JS851xf1VEDYl
       data_encrypted: true
+  - name: bluecross
