--- a/changelogData.toml
+++ b/changelogData.toml
@@ -15,6 +15,9 @@
 [changelog.tag."UP1A.231005.007"]
     file = "ursamoon"
 
+[changelog.tag."AP3A.240905.015.A2"]
+    file = "vallhound"
+
 [changelog.device]
 [changelog.device.luxsolis]
     file = "incommutabilis"
