--- a/furData.toml
+++ b/furData.toml
@@ -156,4 +156,4 @@
 
 [family.sedona]
     brand = "Motorola"
-    furs  = ["XxxVishalxxX", "lahaina", "Notkerd69"]
+    furs  = ["XxxVishalxxX", "lahaina"]
