fix(fd): fix sedona support link
Signed-off-by: Raphiel Rollerscaperers <rapherion@raphielgang.org>

--- a/furData.toml
+++ b/furData.toml
@@ -163,4 +163,4 @@
 [family.sedona]
     brand           = "Motorola"
     furs            = ["XxxVishalxxX", "lahaina"]
-    tg_support_chat = "https://t.me/hentaiOSRaviole"
+    tg_support_chat = "https://t.me/hentaiOSMotoSM6375"
